<resources>
    <string name="app_name">SolarSystemCheatsheet</string>
    <string name="object_name">Object Name</string>
    <string name="object_short_detail">Object Short Detail</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="solar_system_cheatsheet">Solar System Cheatsheet</string>
    <string name="meong">Meong</string>
    <string name="email">weird_alien@protonmail.com</string>
    <string name="github">https://github.com/heisid</string>
    <string name="source">Source: http://wikipedia.org</string>
    <string name="perihelion">Perihelion</string>
    <string name="aphelion">Aphelion</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="radius">Radius</string>
    <string name="mass">Mass</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="surface_gravity">Surface Gravity</string>
</resources>
